--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Byungjin Park",
-  "short_name": "BJ",
+  "name": "Amir Hossein Shekari",
+  "short_name": "Vanenshi",
   "icons": [
     {
       "src": "/android-chrome-192x192.png",
