--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -57,7 +57,7 @@ jobs:
         run: |
           hugo \
             --minify \
-            --baseURL "${{ steps.pages.outputs.base_url }}/"
+            --baseURL "${{ env.BASE_URL }}/"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
