feat: update base url

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
 theme = "awesome-identity"
-baseURL = "https://vanenshi.com"
+baseURL = "https://vanenshi.github.io"
 title = "Amir Hossein Shekari - Software Engineer"
 
 
