--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -53,7 +53,7 @@ jobs:
           # For maximum backward compatibility with Hugo modules
           HUGO_ENVIRONMENT: production
           HUGO_ENV: production
-          BASE_URL: https://vanenshi.com
+          BASE_URL: https://vanenshi.github.io
         run: |
           hugo \
             --minify \
